Fix audio shortcode not aligned with the content
Closes #72.

--- a/assets/css/src/content.css
+++ b/assets/css/src/content.css
@@ -593,3 +593,17 @@ object {
 .gallery-caption {
 	font-size: 80%;
 }
+
+/*--------------------------------------------------------------
+### Audio
+--------------------------------------------------------------*/
+
+.entry-content > .mejs-container {
+	max-width: calc(100% - 3rem);
+}
+
+@media (--content-query) {
+	.entry-content > .mejs-container {
+		max-width: var(--content-width);
+	}
+}
